--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -3,7 +3,7 @@
 <head>
     <title>Registration Details</title>
 </head>
-<body style="background-color: blue;">
+<body>
     <form>
         <fieldset>
             <legend>Personal Details</legend>
